templates/streampipes-core/ui/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
