templates/streampipes-core/ui/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streampipes
spec:
  backend:
    serviceName: nginx
    servicePort: 80
